working tabs, add some basic content

--- a/indexBackup.html
+++ b/indexBackup.html
@@ -9,10 +9,9 @@
 </head>
 <body>
     <div id="content">
-        <div id="nameCont">
+        <div id="headerCont">
             <h1>Some cool caffe name</h1>
         </div>
-        <head>
             <nav>
                 <ul id="navigation">
                     <li id="home">home</li>
@@ -20,7 +19,6 @@
                     <li id="contact">contact</li>
                 </ul>
             </nav>
-        </head>
         <main>
             <div id="info">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae beatae qui mollitia optio enim eaque officia illum voluptatibus magni. Exercitationem totam at assumenda id, minus animi autem consequatur! Iure ea aperiam voluptatibus autem nesciunt at odit dolore doloribus aspernatur. Consectetur id labore nesciunt modi delectus cum debitis? Voluptatum eveniet pariatur voluptates quasi similique nesciunt autem modi, provident amet accusantium repellendus!</p>
